--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,8 @@ h1, h2, h3, h4, h5, h6, .font-heading {
     margin-left: 16%;
     margin-right: auto;
     width: 60%;
+    max-width:100%;
+    height:auto;
 }
 
 
