--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ a:hover {
 h1 {
   font-family: "Raleway", sans-serif;
   text-align: center;
+  text-size: 110%;
 }
 
 h2, h3, h4, h5, h6, .font-heading {
