--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ a:hover {
 h1 {
   font-family: "Raleway", sans-serif;
   text-align: center;
-  text-size: 110%;
+  font-size: 120%;
 }
 
 h2, h3, h4, h5, h6, .font-heading {
