--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,13 @@ h1 {
   text-align: center;
 }
 
-h2, h3, h4, h5, h6, .font-heading {
+h2 {
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+}
+  
+
+h3, h4, h5, h6, .font-heading {
   font-family: "Raleway", sans-serif;
 }
 
