--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,3 +525,16 @@ img {
 
 
   }
+
+.nota {
+  font-family: "Inconsolata", monospace;
+  color: #0d1e2d;
+  text-align: center;
+  margin: 0% 10% 0% 10%
+}
+
+.final {
+  text-align:center;
+
+}
+
